@@ -3,7 +3,7 @@
 # XFree86 Id: xc/config/util/xmkmf.cpp,v 1.3 2000/11/16 21:57:10 dawes Exp
 # XConsortium Id: xmkmf.cpp /main/22 1996/09/28 16:17:05 rws
 #
-# $NetBSD: pkgxmkmf.in,v 1.3 2003/06/12 15:34:39 jschauma Exp $
+# $NetBSD: pkgxmkmf.in,v 1.4 2004/01/03 23:34:21 jlam Exp $
 #
 # make a Makefile from an Imakefile from inside or outside the sources
 # with support for config files in ${PREFIX}/lib/X11/config
@@ -12,9 +12,13 @@ usage="usage:  $0 [-a] [top_of_sources_pathname [current_directory]]"
 
 xcfgdir=@X11BASE@/lib/X11/config
 lcfgdir=@PREFIX@/lib/X11/config
+vcfgdir=@VIEWBASE@/lib/X11/config
 configdirspec=''
 if [ "${xcfgdir}" != "${lcfgdir}" -a -d ${lcfgdir} ]; then
 	configdirspec="${configdirspec} -I${lcfgdir}"
+fi
+if [ "${lcfgdir}" != "${vcfgdir}" -a -d ${vcfgdir} ]; then
+	configdirspec="${configdirspec} -I${vcfgdir}"
 fi
 configdirspec="${configdirspec} -I${xcfgdir}"
 
